--- a/index.html
+++ b/index.html
@@ -105,8 +105,77 @@
                 </div>
             </div>
         <div class="clearfix">
-            
+            <br><br>
+            <div class="col-div-8">
+                <div class="box-8">
+                    <div class="content-box">
+                        <p>Top Selling Projects
+                            <span>Sell All</span>
+                        </p>
+                        <table>
+                            <tr>
+                                <th>Company</th>
+                                <th>Contact</th>
+                                <th>Country</th>
+                            </tr>
+
+                            <tr>
+                                <td>Pepsi Inc.</td>
+                                <td>Maximiliano Gonzáles</td>
+                                <td>México</td>
+                            </tr>
+
+                            <tr>
+                                <td>19 hermanos</td>
+                                <td>Oscar Berman</td>
+                                <td>México</td>
+                            </tr>
+
+                            <tr>
+                                <td>Nestle</td>
+                                <td>Moises Guerra</td>
+                                <td>México</td>
+                            </tr>
+
+                            <tr>
+                                <td>Sabritas</td>
+                                <td>Christian Soto</td>
+                                <td>México</td>
+                            </tr>
+
+                            <tr>
+                                <td>Intel</td>
+                                <td>Steve Jobs</td>
+                                <td>United States</td>
+                            </tr>
+                        </table>
+                    </div>
+                </div>
+            </div>
+            <div class="col-div-4">
+                <div class="box-4">
+                    <div class="content-box">
+                        <p>Total Sell
+                            <span>Sell All</span>
+                        </p>
+                        <div class="circle-wrap">
+                            <div class="circle">
+                                <div class="mask full">
+                                    <div class="fill"></div>
+                                </div>
+
+                                <div class="mask half">
+                                    <div class="fill"></div>
+                                </div>
+
+                                <div class="inside-circle">75%</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
+        <div class="clearfix"></div>
     </div>
 
 
